--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ apply plugin: 'io.spring.dependency-management'
 // ################################################################
 
 bootJar {
-    baseName = 'requestserver'
+    baseName = 'queue'
     version = '0.1.0'
 }
 
