--- a/build.gradle
+++ b/build.gradle
@@ -87,8 +87,7 @@ dependencies {
 
     // needed for JPA
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile('mysql:mysql-connector-java:8.0.13')
-
+    compile("mysql:mysql-connector-java:5.1.46")
     // needed for sql database
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
     compile("com.h2database:h2")
